proxima-macros/tests/ui/pipe_unknown_arg.stderr
error: unknown #[proxima::piped] arg; expected `send`, `unpin`, `boxed`, or `name = Ident`
 --> tests/ui/pipe_unknown_arg.rs:4:9
  |
4 | #[piped(bogus)]
  |         ^^^^^
